# Dormora

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Launch UDRMS.bat  README.md  UDRMS App.lnk
backend/include/udrms/: AppState.h  DomainError.h  Restaurant.h  Student.h
backend/src/: AppState.cpp  Dormitory.cpp  JsonStorage.cpp  Person.cpp  Restaurant.cpp  Room.cpp  Student.cpp  University.cpp  main.cpp
backend/tests/: backend_tests.cpp
docs/: code-review-notes.md  uml-class-diagram.puml
docs/superpowers/plans/: 2026-05-21-gui-aesthetic-refresh.md
extras/docs/: SUBMISSION.md  assignment-compliance.md  interview-preparation.md  meal-image-sources.md  presentation-readiness-audit.md  project-report.md  uml-class-diagram.drawio  uml-class-diagram.puml  uml-room-assignment-sequence.puml
extras/examples/: sample-university-data.json
extras/scripts/: package-release.ps1
frontend/resources/: dormora_icons.qrc
frontend/src/: gui_main.cpp
include/udrms/: Dormitory.h  JsonStorage.h  Person.h  Restaurant.h  Room.h  University.h
resources/: dormora_icons.qrc
src/: Dormitory.cpp  JsonStorage.cpp  Restaurant.cpp  Room.cpp  Student.cpp  University.cpp  gui_main.cpp  main.cpp
tests/: backend_tests.cpp
